# Tost

./: CMakeLists.txt  Grammer.md
src/: interpreter.cpp  interpreter.hpp  laxer.cpp  laxer.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src_tost/: test.tost
